package org.example.sem_backend.modules.document_module.core.service;

public interface DocumentParser {
    void parseDocument(String filePath);
}
